<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:clickable="true"
    tools:context=".module.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/bg_header"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_gradient_profile"
                android:elevation="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/bg_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/bg_header" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:elevation="2dp"
                android:src="@drawable/img_avatar_sample"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_120dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_login_shadow"
                android:elevation="3dp"
                android:text="@string/text_sign_in"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@id/bg_header"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/_120dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_set_filter"
                android:elevation="3dp"
                android:text="@string/text_sign_up"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@id/bg_header"
                app:layout_constraintStart_toEndOf="@id/btn_login" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/text_hello"
                android:textColor="@color/paint_white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/imv_avatar"
                app:layout_constraintStart_toEndOf="@id/imv_avatar"
                app:layout_constraintTop_toTopOf="@id/imv_avatar" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/text_address"
                android:textColor="@color/color_black"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/imv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="37dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/text_language"
                android:textColor="@color/color_black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bg_header" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/text_language"
                app:layout_constraintTop_toBottomOf="@id/text_language" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#fafafa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_language" />

            <TextView
                android:id="@+id/text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/text_currency"
                android:textColor="@color/color_black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <Spinner
                android:id="@+id/spinner_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/text_currency"
                app:layout_constraintTop_toBottomOf="@id/text_currency" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#fafafa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_currency" />

            <TextView
                android:id="@+id/text_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/text_measure"
                android:textColor="@color/color_black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <Spinner
                android:id="@+id/spinner_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/text_measure"
                app:layout_constraintTop_toBottomOf="@id/text_measure" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#fafafa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_measure" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@drawable/selector_ripple_active"
                android:clickable="true"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:text="@string/text_about"
                android:textColor="@color/color_black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line3" />

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about" />

            <TextView
                android:id="@+id/tv_faq_support"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@drawable/selector_ripple_active"
                android:clickable="true"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:text="@string/text_faq_support"
                android:textColor="@color/color_black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line4" />

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_faq_support" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@drawable/selector_ripple_active"
                android:clickable="true"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:text="@string/text_version"
                android:textColor="@color/color_black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line5" />


        </androidx.constraintlayout.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.ConstraintLayout>